--- a/styles.css
+++ b/styles.css
@@ -2271,6 +2271,59 @@ transition: all .4s;
   
   
   }
+  
+@media only screen and  (max-width:457px){
+
+  .meh-img{
+    display: flex;
+    flex-direction: row;
+    align-items: end;
+    position: absolute;
+    right: -1.5rem;
+    transform: translate(-11%,0);
+    top: 65%; 
+   z-index: -1;
+   margin-top: 2rem;
+   width: 90%;
+    } 
+    .wed-img{
+      display: flex;
+      flex-direction: row;
+      align-items: end;
+      position: absolute;
+      right: 0;
+      transform: translate(5%,0);
+      top: 60%; 
+     z-index: -1;
+     margin-top: 2rem;
+     width: 90%;
+     
+     } 
+     .rec-img{
+      display: flex;
+      flex-direction: row;
+      align-items: end;
+      position: absolute;
+      right: 0;
+      transform: translate(-6%,0);
+      top: 60%; 
+     z-index: -1;
+     margin-top: 2rem;
+     width: 90%;
+     }
+     .rsvp-by{
+      display: flex;
+      flex-direction: row;
+      position: absolute;
+      font-family: 'Ovo';
+      font-size: 1.3rem;
+      color: white;
+      left: -10%;
+      transform: translate(50%,0);
+      padding-top: .5rem;
+    }
+
+}
 
 @media only screen and  (max-width: 425px){
   .main-nav{
